2008-04-10  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/check/gstcheck.c:
	  Remove blank line between symbol name ad parameters to fix gtkdoc
	  warning.

2008-04-09  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by:  José Alburquerque <jaalburqu at svn dot gnome dot org>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstsegment.c:
	* gst/gstsegment.h:
	* win32/common/libgstreamer.def:
	  Expose gst_segment_copy() to make things easier for the c++ bindings.
	  Fixes #518932.
	  API: gst_segment_copy()

2008-04-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gst.c: (gst_init_get_option_group), (init_post):
	  Fix const position; ref GType classes for enum types to work
	  around thread-safety issues in GLib versions < 2.16.

2008-04-09  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-buffering.txt:
	Fix some typos and set the estimated total for push mode to -1.

	* gst/gstquery.c: (gst_query_new_buffering):
	Set buffering-left to 0 as we're not buffering by default.

	* libs/gst/base/gstbasesrc.c: (gst_base_src_default_query):
	Implement BUFFERING query.

2008-04-09  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Milosz Derezynski <internalerror gmail com>

	* gst/gsterror.c: (_gst_stream_errors_init):
	* gst/gsterror.h:
	  Add two new error codes for encrypted content. Fixes #524659.
	  API: GST_STREAM_ERROR_DECRYPT
	  API: GST_STREAM_ERROR_DECRYPT_NOKEY

2008-04-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gstquery.h:
	  Fix typo.

	* win32/common/libgstreamer.def:
	  Add new functions.

2008-04-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gstidentity.c: (gst_identity_event),
	(gst_identity_start):
	Fix imperfect timestamp/offset checks when we get another NEWSEGMENT
	event after processing some data. Fixes bug #526042.

2008-04-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstquery.c: (gst_query_parse_latency),